--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "dependencies": {
     "@emailjs/browser": "^3.6.2",
-    "bulma": "^0.9.3"
+    "bulma": "^0.9.3",
+    "hamburgers": "^1.2.1",
+    "sass": "^1.54.5",
+    "tailwindcss": "^3.1.8"
   }
 }
